--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/image.png" />
+    <link rel="icon" type="image/png" href="/leaf-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Closed List - Conifer Health</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
